# Distributed_Autonomous_Systems_Project

./: QuestionsForTheProfessor.md  README.md
Classification_Neural_Network_Task/: ActivationFunctions.py  Function_Task_1.py  distributed_neural_network.py  plot_csv.py  plot_results.py  single_neural_network.py
Formation_Control_task/: discrete_bearing_formation_control.py  functions.py
Formation_Control_task/Formation_Control_task_ROS2/src/formation_task/: package.xml  setup.cfg  setup.py
Formation_Control_task/Formation_Control_task_ROS2/src/formation_task/formation_task/: agent_i.py  agent_lett_i.py  functions.py  functions_lett.py  visualizer.py
Formation_Control_task/Formation_Control_task_ROS2/src/formation_task/launch/: formation.launch.py  formation_exagon.launch.py  formation_group.launch.py  formation_octagon.launch.py  formation_square.launch.py  formations.launch.py  formations_letters.launch.py
Test_Marco/: ActivationFunctions.py  Function_Task_1.py  Test_Task1_Marco.py  Test_marco_task1.ipynb  distributed_neural_network.py  plor_csv.py  plot_csv.py  prova_BCE.py  single_neural_network.py
classification_NN_task/: Accuratezza0.3su200elementi.ipynb  DistributerGradientTrakingOfNNClassifier.ipynb  DistributerGradientTrakingOfNNClassifier__V2.ipynb  FunzionaPerNumeriPosENegESuPiuImmaginiV5.ipynb  Roman_Distributed_Classificatore.ipynb  Roman_Distributed_Classificatore.py  Roman_Distributed_ClassificatoreV4.ipynb
classification_NN_task_Roman/: FunzionaPerNumeriPosENegESuPiuImmaginiV5.ipynb  NewVersion.ipynb  Roman_Distributed_ClassificatoreV2.ipynb  (+3 more)
(+29 files in other folders)
