<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>formation_task</name>
  <version>1.0.0</version>
  <description>Package developed as part of the Distributed Autonomous Systems task</description>
  <maintainer email="alessandro.cecconi2@studio.unibo.it">Cecconi Alessandro</maintainer>
  <maintainer email="roman.sudin@studio.unibo.it">Sudin Roman</maintainer>
  <maintainer email="marco.bugo@studio.unibo.it">Bugo Marco</maintainer>

  <license>See github page for info</license>


  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
